--- a/mod2_solution/css/style.css
+++ b/mod2_solution/css/style.css
@@ -35,7 +35,7 @@ section>p.subtitle {
     width: 150px;
     text-align: center;
     font-size: 20px;
-    height: 40px;
+    height: 45px;
 }
 #chicken .subtitle {
     background-color: #a37c7a;
@@ -49,12 +49,15 @@ section>p.subtitle {
 }
 section>p {
     padding: 10px 10px 10px 10px;
-    overflow: auto;
+    overflow: hidden;
     cursor: row-resize;
     margin-right: auto;
     margin-left: auto;
     width: 100%;
     height: 150px;
+}
+section>p.text:hover {
+    overflow-y: scroll;
 }
 /* Simple Responsive Framework. */
 .row {
